# RiscV-Simulator

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
src/: application.cpp  application.h  glfw_custom_allocator.cpp  glfw_custom_allocator.h  imgui_layer.cpp  imgui_layer.h  layer.h  logger.cpp  logger.h  main.cpp
src/CPU/: cpu.cpp  cpu.h  instructions_types.h  pipeline.h  registers.h  single_cycle.cpp  single_cycle.h
